--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "9     PEX10  ENSG00000157911"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
    "metadata": {},
    "source": [
     "### load omics data\n",
-    "Download demo data from [Google Drive](https://drive.google.com/drive/folders/1w4GGIZRUNevTkWUSsLKPNS5AliHeOvi8?usp=sharing), put it into DATA_DIR, and run:"
+    "The input demo data as well as the label information are uploaded [here](https://github.com/JiafangLi/MOGT/tree/main/data), put it into DATA_DIR, and run:"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "metadata": {},
    "source": [
     "### SNP-SNP interaction construction\n",
-    "Then, we read the SNP-SNP interaction data ([Google Drive](https://drive.google.com/drive/folders/1w4GGIZRUNevTkWUSsLKPNS5AliHeOvi8?usp=sharing)) and transform it into a graph through the following commands:"
+    "Then, we read the SNP-SNP interaction data (SNP-SNP interaction from [Zenodo]()) and transform it into a graph through the following commands:"
    ]
   },
   {
@@ -730,22 +730,8 @@
    "metadata": {},
    "source": [
     "### Load data and Train model <div id=\"load-data-and-train-model\"></div>\n",
-    "| Item       | Details          |\n",
-    "| ---------- | ---------------- |\n",
-    "| System     | Ubuntu 20.04.1 LTS |\n",
-    "| RAM Memory | 256G               |\n",
-    "| GPU Memory | NVIDIA GeForce RTX, 24G     |\n",
     "\n",
-    "```note\n",
-    "The above table reports our computing details during CGMega development and IS NOT our computing requirement.\n",
-    "\n",
-    "If your computer does not satisfy the above, you may try to lower down the memory used during model training by reduce the sampling parameters, the batch size or so on. \n",
-    "\n",
-    "We are going to test CGMega under more scenarios like with different models of GPU or memory limits to update this table.\n",
-    "\n",
-    "```\n",
-    "\n",
-    "A 5-fold training would cost 41m on our computer."
+    "A 5-fold training."
    ]
   },
   {
@@ -1017,7 +1003,6 @@
     "configs['device'] = 'cuda'\n",
     "\n",
     "# Set log_name and logfile to suit your needs, and you will see training details in logfile.\n",
-    "# configs['log_name'] = f\"{get_cell_line(configs['data_dir'])[1:]}_{configs['ppi']}\"\n",
     "configs['log_name'] = configs[\"disease\"]\n",
     "configs['logfile'] = os.path.join(configs[\"log_dir\"], configs[\"log_name\"] + \".txt\")\n",
     "\n",
@@ -1043,7 +1028,6 @@
     "    y_score, y_pred, y_true, y_index, genes = predict(modules['model'], modules['test_loader_list'], configs, new_ckpt)\n",
     "    acc, cf_matrix, auprc, f1, auc, test_cutoff = calculate_metrics(y_true, y_pred, y_score)\n",
     "     #save test result\n",
-    "    # test_true,test_pred,test_score,genes = test(modules['model'], modules['test_loader_list'],configs['device'],cutoff,i)\n",
     "    y = pd.DataFrame({'y_true': y_true, 'y_score': y_score,\"y_pred\":y_pred,\"cutoff\":cutoff})\n",
     "    result = pd.concat([genes,y], axis=1)\n",
     "    result.to_csv(configs[\"out_dir\"]+\"/\"+disease +\"/\"+disease+\"_\"+\"test\"+\"_\"+str(i)+\".csv\",index_label=False)\n",
@@ -1068,33 +1052,6 @@
     "    print(f\"{CV_FOLDS}-folds AUPRC:{avg_Auprc:.4f}+{auprc_ci}, AUROC:{avg_auc:.4f}+{auc_ci}, F1:{avg_fi:.4f}\",\n",
     "            file=f, flush=True)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading dataset from: data/SCZ_core/SCZ_core_dataset.pkl ......\n",
-      "checkpoints:['3_SCZ_core_0.8235.pkl', '2_SCZ_core_0.8545.pkl', '4_SCZ_core_0.8848.pkl', '1_SCZ_core_0.8672.pkl', '0_SCZ_core_0.8593.pkl'] \n",
-      "start loading model\n",
-      "start load data\n",
-      "Loading model from ./outs/SCZ_core/4_SCZ_core_0.8848.pkl ......\n",
-      "Loading model from ./outs/SCZ_core/4_SCZ_core_0.8848.pkl ......\n",
-      "0.3171\n",
-      "候选基因的长度：1271\n"
-     ]
-    }
-   ],
-   "source": [
-    "#scz_core\n",
-    "from main import predict_all\n",
-    "cutoff = 0.3171\n",
-    "predict_all(configs,cutoff)"
    ]
   }
  ],
